--- a/package/package.json
+++ b/package/package.json
@@ -6,6 +6,7 @@
     "serve:svg": "ts-node server/svg-server/index.ts"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
     "lodash": "^4.17.21",
@@ -14,9 +15,9 @@
     "vite": "^2.3.8"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170",
-    "@types/node": "^15.12.5",
     "@types/express": "^4.17.12",
-    "@types/json-server": "^0.14.3"
+    "@types/json-server": "^0.14.3",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^15.12.5"
   }
 }
