--- a/package/tsconfig.json
+++ b/package/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ES2017",
+    "module": "CommonJS",
     "moduleResolution": "node",
+    "outDir": "./dist",
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
