--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "archive": "^0.0.2",
     "archiver": "^5.3.0",
     "chokidar": "^3.5.2",
+    "dayjs": "^1.10.6",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
     "lowdb": "1.0.0",
@@ -42,7 +43,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@tuimao/eslint-config-preset": "^1.1.0",
     "@tuimao/tailwind-config-preset": "^1.0.9",
-    "@tuimao/utils": "^1.0.3",
+    "@tuimao/utils": "^1.0.95",
     "@types/archiver": "^5.1.0",
     "@types/express": "^4.17.12",
     "@types/json-server": "^0.14.3",
