--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/TuiMao233/vite-plugin-fonts#readme",
   "dependencies": {
+    "@vueuse/core": "^5.1.3",
     "archive": "^0.0.2",
     "archiver": "^5.3.0",
     "chokidar": "^3.5.2",
@@ -36,8 +37,9 @@
     "json-server": "^0.16.3",
     "lowdb": "1.0.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.23",
     "nodejs-fs-utils": "^1.2.5",
-    "svgtofont": "^3.11.4"
+    "svgtofont": "^3.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
