--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/TuiMao233/vite-plugin-fonts#readme",
   "dependencies": {
+    "@tuimao/core": "^0.0.8-alpha.0",
     "@vueuse/core": "^5.1.3",
     "archive": "^0.0.2",
     "archiver": "^5.3.0",
