--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "vite-plugin-fonts-admin",
-  "version": "1.0.66",
+  "name": "adminfont",
   "scripts": {
     "dev": "vite",
-    "serve": "node package/server.js",
+    "serve": "yarn build && node package/server.js",
     "build": "vite build && cd plugin && tsc",
     "build:client": "vite build",
     "build:server": "cd plugin && tsc"
   },
-  "files": [
-    "package"
-  ],
-  "main": "package/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TuiMao233/vite-plugin-fonts.git"
@@ -28,7 +23,7 @@
   },
   "homepage": "https://github.com/TuiMao233/vite-plugin-fonts#readme",
   "dependencies": {
-    "@tuimao/core": "^0.0.8-alpha.0",
+    "@tuimao/core": "^0.2.2",
     "@vueuse/core": "^5.1.3",
     "archive": "^0.0.2",
     "archiver": "^5.3.0",
